Mobile Version Menu

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
      </div>     
     
   </main>
-  <div class="mob_nav">
+  <div class="mob_nav active">
     <img class="hamClose" src="./images/icon-close.svg" alt="HamBurger">
     <ul class="section1">
        <li>Product</li>
